# agentcommunication_client

./: CMakeLists.txt  CONTRIBUTING  MODULE.bazel  README  README.md  WORKSPACE  client.go  client_test.go  go.mod  go.sum  metadata.go
.github/workflows/: go.yml
cpp/: BUILD.bazel  acs_agent_client.cc  acs_agent_client.h  acs_agent_client_reactor.cc  acs_agent_client_reactor.h  acs_agent_client_reactor_test.cc  acs_agent_client_test.cc  acs_agent_helper.cc  acs_agent_helper.h  acs_agent_helper_test.cc  fake_acs_agent_server_reactor.cc  fake_acs_agent_server_reactor.h  jwt.cc  jwt.h  jwt_test.cc
cpp/CMakeExternalProject/: CMakeLists.txt
example/: main.go
gapic/: agent_communication_client.go  doc.go  gapic_metadata.json  helpers.go
gapic/agentcommunicationpb/: agent_communication.pb.go
proto/: BUILD.bazel  CMakeLists.txt  agent_communication.proto  client.proto
