module(
    name = "acs",
    version = "1.0.0",
)

bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "grpc", version = "1.68.0", repo_name = "com_google_grpc")
bazel_dep(name = "jwt-cpp", version = "0.7.0.bcr.1")
bazel_dep(name = "curl", version = "8.8.0.bcr.1", repo_name = "curl")
